--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </li>
         </ul>
         <!-- social icons -->
-        <ul>
+        <ul class="social-icons">
           <li>
             <a href="https://www.facebook.com" class="social-icon">
               <i class="fab fa-facebook"></i>
@@ -87,11 +87,6 @@
           <li>
             <a href="https://www.squarespace.com" class="social-icon">
               <i class="fab fa-squarespace"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com" class="social-icon">
-              <i class="fab fa-instagram"></i>
             </a>
           </li>
         </ul>
