--- a/index.html
+++ b/index.html
@@ -94,7 +94,47 @@
     </aside>
     <!-- end of sidebar -->
     <!-- header -->
-    <div class="hero"></div>
+    <header class="hero">
+      <div class="section-center hero-center">
+        <article class="hero-info">
+          <div class="underline"></div>
+          <h1>i'm john</h1>
+          <h4>freelance web & mobile developer</h4>
+          <a href="contact.html" class="btn hero-btn">hire me</a>
+          <!-- social icons -->
+          <ul class="social-icons hero-icon">
+            <li>
+              <a href="https://www.facebook.com" class="social-icon">
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.twitter.com" class="social-icon">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.quora.com" class="social-icon">
+                <i class="fab fa-quora"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com" class="social-icon">
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.squarespace.com" class="social-icon">
+                <i class="fab fa-squarespace"></i>
+              </a>
+            </li>
+          </ul>
+        </article>
+        <article class="hero-img">
+          <img src="./images/hero-img.jpeg" class="hero-photo" alt="john doe" />
+        </article>
+      </div>
+    </header>
     <!-- end of header -->
     <!-- about -->
 
