--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <h4>freelance web & mobile developer</h4>
           <a href="contact.html" class="btn hero-btn">hire me</a>
           <!-- social icons -->
-          <ul class="social-icons hero-icon">
+          <ul class="social-icons hero-icons">
             <li>
               <a href="https://www.facebook.com" class="social-icon">
                 <i class="fab fa-facebook"></i>
