--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <article class="hero-info">
           <div class="underline"></div>
           <h1>i'm john</h1>
-          <h4>freelance web & mobile developer</h4>
+          <h4>freelance web & mobile UI/UX developer</h4>
           <a href="contact.html" class="btn hero-btn">hire me</a>
           <!-- social icons -->
           <ul class="social-icons hero-icons">
@@ -137,7 +137,42 @@
     </header>
     <!-- end of header -->
     <!-- about -->
-
+    <section class="section about">
+      <div class="section-center about-center">
+        <!-- about img -->
+        <article class="about-img">
+          <img
+            src="./images/about-img.jpeg"
+            class="hero-photo"
+            alt="about img"
+          />
+        </article>
+        <!-- about info -->
+        <article class="about-info">
+          <!-- section title -->
+          <div class="section-title about-title">
+            <h2>about</h2>
+            <div class="underline"></div>
+          </div>
+          <!-- end of section title -->
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
+            natus. Blanditiis quam officia accusamus doloribus reiciendis
+            aspernatur sunt veniam, magni qui maxime numquam alias dignissimos
+            dolorum, earum illum mollitia perspiciatis harum quasi facere
+            debitis cumque optio molestias! Harum, obcaecati voluptatem.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
+            natus. Blanditiis quam officia accusamus doloribus reiciendis
+            aspernatur sunt veniam, magni qui maxime numquam alias dignissimos
+            dolorum, earum illum mollitia perspiciatis harum quasi facere
+            debitis cumque optio molestias! Harum, obcaecati voluptatem.
+          </p>
+          <a href="about.html" class="btn">about me</a>
+        </article>
+      </div>
+    </section>
     <!-- end of about -->
     <!-- services -->
 
