about screen small size

--- a/index.html
+++ b/index.html
@@ -156,18 +156,19 @@
           </div>
           <!-- end of section title -->
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
-            natus. Blanditiis quam officia accusamus doloribus reiciendis
-            aspernatur sunt veniam, magni qui maxime numquam alias dignissimos
-            dolorum, earum illum mollitia perspiciatis harum quasi facere
-            debitis cumque optio molestias! Harum, obcaecati voluptatem.
+            I was the designer and front-end developer for the initial Pet Plate
+            website in 2015 and worked closely with the company as it grew over
+            a period of 5 years, eventually becoming Lead Front-end Developer.
+            By early 2020, Pet Plate had successfully raised a total investment
+            fund of $13 million dollars.
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
-            natus. Blanditiis quam officia accusamus doloribus reiciendis
-            aspernatur sunt veniam, magni qui maxime numquam alias dignissimos
-            dolorum, earum illum mollitia perspiciatis harum quasi facere
-            debitis cumque optio molestias! Harum, obcaecati voluptatem.
+            CSS3 Foundations is a book I wrote in 2012 guiding readers through
+            the process of using CSS3 features and techniques to take a basic
+            website template and turn it into a real-world, modern and future
+            proof website. It was published in paperback and digital formats by
+            Wiley and later translated to Chinese. It was well received with a
+            review score of 4.5 out of 5 on Amazon.
           </p>
           <a href="about.html" class="btn">about me</a>
         </article>
