services html section

--- a/index.html
+++ b/index.html
@@ -176,7 +176,52 @@
     </section>
     <!-- end of about -->
     <!-- services -->
-
+    <section class="section br-grey">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>services</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="services-center section-center">
+        <!-- first service -->
+        <article class="service">
+          <i class="fas fa-code service-icon"></i>
+          <h4>web development</h4>
+          <div class="underline"></div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi
+            cum reprehenderit dolor non vitae nesciunt fugiat asperiores
+            voluptas iusto rerum?
+          </p>
+        </article>
+        <!--end of first service -->
+        <!-- second service -->
+        <article class="service">
+          <i class="fab fa-sketch service-icon"></i>
+          <h4>web design</h4>
+          <div class="underline"></div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi
+            cum reprehenderit dolor non vitae nesciunt fugiat asperiores
+            voluptas iusto rerum?
+          </p>
+        </article>
+        <!--end of second service -->
+        <!-- third service -->
+        <article class="service">
+          <i class="fa-brands fa-android service-icon"></i>
+          <h4>app design</h4>
+          <div class="underline"></div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi
+            cum reprehenderit dolor non vitae nesciunt fugiat asperiores
+            voluptas iusto rerum?
+          </p>
+        </article>
+        <!--end of third service -->
+      </div>
+    </section>
     <!-- end of services -->
     <!-- projects -->
 
