css small screen

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </section>
     <!-- end of about -->
     <!-- services -->
-    <section class="section br-grey">
+    <section class="section bg-grey">
       <!-- section title -->
       <div class="section-title">
         <h2>services</h2>
