project section html

--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
           <h4>web development</h4>
           <div class="underline"></div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi
-            cum reprehenderit dolor non vitae nesciunt fugiat asperiores
-            voluptas iusto rerum?
+            Web development is the building and maintenance of websites; it's
+            the work that happens behind the scenes to make a website look
+            great, work fast and perform well with a seamless user experience.
           </p>
         </article>
         <!--end of first service -->
@@ -202,9 +202,10 @@
           <h4>web design</h4>
           <div class="underline"></div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi
-            cum reprehenderit dolor non vitae nesciunt fugiat asperiores
-            voluptas iusto rerum?
+            Web design is the process of planning, conceptualizing, and
+            arranging content online. Today, designing a website goes beyond
+            aesthetics to include the websites overall functionality. Web design
+            also includes web apps, mobile apps, and user interface design.
           </p>
         </article>
         <!--end of second service -->
@@ -214,9 +215,10 @@
           <h4>app design</h4>
           <div class="underline"></div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi
-            cum reprehenderit dolor non vitae nesciunt fugiat asperiores
-            voluptas iusto rerum?
+            App design combines the user interface (UI) and user experience
+            (UX). While UI lends itself to the overall style of the app
+            (including the colors, fonts, and general look and feel), UX focuses
+            on the actual functionality and usability.
           </p>
         </article>
         <!--end of third service -->
@@ -224,7 +226,83 @@
     </section>
     <!-- end of services -->
     <!-- projects -->
-
+    <section class="section projects">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>projects</h2>
+        <div class="underline"></div>
+        <p class="projects-text">
+          A Software Project is the complete procedure of software development
+          from requirement gathering to testing and maintenance, carried out
+          according to the execution methodologies, in a specified period of
+          time to achieve intended software product.It involves designing,
+          development, and maintenance of various application-based softwares.
+        </p>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center projects-center">
+        <!-- first project -->
+        <a href="projects.html" class="project-1">
+          <article class="project">
+            <img
+              src="./images/project-1.jpeg"
+              alt="single project"
+              class="project-img"
+            />
+            <div class="project-info">
+              <h4>project title</h4>
+              <p>client name</p>
+            </div>
+          </article>
+        </a>
+        <!-- end of first project -->
+        <!-- second project -->
+        <a href="projects.html" class="project-2">
+          <article class="project">
+            <img
+              src="./images/project-2.jpeg"
+              alt="single project"
+              class="project-img"
+            />
+            <div class="project-info">
+              <h4>project title</h4>
+              <p>client name</p>
+            </div>
+          </article>
+        </a>
+        <!-- end of second project -->
+        <!-- third project -->
+        <a href="projects.html" class="project-3">
+          <article class="project">
+            <img
+              src="./images/project-3.jpeg"
+              alt="single project"
+              class="project-img"
+            />
+            <div class="project-info">
+              <h4>project title</h4>
+              <p>client name</p>
+            </div>
+          </article>
+        </a>
+        <!-- end of third project -->
+        <!-- fourth project -->
+        <a href="projects.html" class="project-4">
+          <article class="project">
+            <img
+              src="./images/project-4.jpeg"
+              alt="single project"
+              class="project-img"
+            />
+            <div class="project-info">
+              <h4>project title</h4>
+              <p>client name</p>
+            </div>
+          </article>
+        </a>
+        <!-- end of fourth project -->
+      </div>
+    </section>
     <!-- end of projects -->
     <!-- connect -->
 
