projects small screen styling

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <section class="section projects">
       <!-- section title -->
       <div class="section-title">
-        <h2>projects</h2>
+        <h2>latest works</h2>
         <div class="underline"></div>
         <p class="projects-text">
           A Software Project is the complete procedure of software development
@@ -250,8 +250,8 @@
               class="project-img"
             />
             <div class="project-info">
-              <h4>project title</h4>
-              <p>client name</p>
+              <h4>banking app</h4>
+              <p>HDFC bank</p>
             </div>
           </article>
         </a>
@@ -265,8 +265,8 @@
               class="project-img"
             />
             <div class="project-info">
-              <h4>project title</h4>
-              <p>client name</p>
+              <h4>e-commerce webapp</h4>
+              <p>amazon</p>
             </div>
           </article>
         </a>
@@ -280,8 +280,8 @@
               class="project-img"
             />
             <div class="project-info">
-              <h4>project title</h4>
-              <p>client name</p>
+              <h4>search engine</h4>
+              <p>google</p>
             </div>
           </article>
         </a>
@@ -295,8 +295,8 @@
               class="project-img"
             />
             <div class="project-info">
-              <h4>project title</h4>
-              <p>client name</p>
+              <h4>health app</h4>
+              <p>adidas</p>
             </div>
           </article>
         </a>
