--- a/index.html
+++ b/index.html
@@ -305,7 +305,19 @@
     </section>
     <!-- end of projects -->
     <!-- connect -->
-
+    <section class="connect">
+      <video
+        controls
+        autoplay
+        muted
+        loop
+        class="video-container"
+        poster="./images/project-1.jpeg"
+      >
+        <source src="./videos/connect.mp4" type="video/mp4" />
+        Sorry, your browser doest not support embedded videos
+      </video>
+    </section>
     <!-- end of connect -->
     <!-- skills -->
 
