--- a/index.html
+++ b/index.html
@@ -314,9 +314,27 @@
         class="video-container"
         poster="./images/project-1.jpeg"
       >
-        <source src="./videos/connect.mp4" type="video/mp4" />
+        <!-- <source src="./videos/connect.mp4" type="video/mp4" /> -->
         Sorry, your browser doest not support embedded videos
       </video>
+      <div class="video-banner">
+        <!-- section title -->
+        <div class="section-title">
+          <h2>let's get in touch</h2>
+          <div class="underline"></div>
+        </div>
+        <!-- end of section title -->
+        <p class="video-text">
+          Great customer service means following best practices like valuing
+          customers' time, having a pleasant attitude, and providing
+          knowledgeable and resourceful resources, but that you also take things
+          a step further to exceed — rather than just meet —
+          expectations.Exceptional customer service is the unconditional
+          commitment to giving the highest level of product or service to every
+          person, regardless of the circumstances.
+        </p>
+        <a href="contact.html" class="btn">contact me</a>
+      </div>
     </section>
     <!-- end of connect -->
     <!-- skills -->
