--- a/index.html
+++ b/index.html
@@ -338,7 +338,76 @@
     </section>
     <!-- end of connect -->
     <!-- skills -->
-
+    <section class="section skills">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>skills</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center skills-center">
+        <article>
+          <h3>front end</h3>
+          <!-- first skill -->
+          <div class="skill">
+            <p>HTML/CSS</p>
+            <div class="skill-container">
+              <div class="skill-value"></div>
+              <p class="skill-text">50%</p>
+            </div>
+          </div>
+          <!-- end of first skill -->
+          <!-- second skill -->
+          <div class="skill">
+            <p>Javascript</p>
+            <div class="skill-container">
+              <div class="skill-value vlue-70"></div>
+              <p class="skill-text skill-text-70">70%</p>
+            </div>
+          </div>
+          <!-- end of second skill -->
+          <!-- third skill -->
+          <div class="skill">
+            <p>React</p>
+            <div class="skill-container">
+              <div class="skill-value value-80"></div>
+              <p class="skill-text skill-text-80">80%</p>
+            </div>
+          </div>
+          <!-- end of third skill -->
+        </article>
+        <article>
+          <h3>back end</h3>
+          <!-- first skill -->
+          <div class="skill">
+            <p>Node</p>
+            <div class="skill-container">
+              <div class="skill-value"></div>
+              <p class="skill-text">50%</p>
+            </div>
+          </div>
+          <!-- end of first skill -->
+          <!-- second skill -->
+          <div class="skill">
+            <p>Python</p>
+            <div class="skill-container">
+              <div class="skill-value vlue-70"></div>
+              <p class="skill-text skill-text-70">70%</p>
+            </div>
+          </div>
+          <!-- end of second skill -->
+          <!-- third skill -->
+          <div class="skill">
+            <p>PHP</p>
+            <div class="skill-container">
+              <div class="skill-value value-80"></div>
+              <p class="skill-text skill-text-80">80%</p>
+            </div>
+          </div>
+          <!-- end of third skill -->
+        </article>
+      </div>
+    </section>
     <!-- end of skills -->
     <!-- timeline -->
 
