--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
           <div class="skill">
             <p>Python</p>
             <div class="skill-container">
-              <div class="skill-value vlue-70"></div>
+              <div class="skill-value value-70"></div>
               <p class="skill-text skill-text-70">70%</p>
             </div>
           </div>
