--- a/index.html
+++ b/index.html
@@ -410,7 +410,82 @@
     </section>
     <!-- end of skills -->
     <!-- timeline -->
-
+    <section class="section timeline">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>timeline</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center timeline-center">
+        <!-- first timeline item -->
+        <article class="timeline-item">
+          <h4>2022</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
+            voluptatum amet voluptas a provident quis architecto nisi. Velit,
+            quas eveniet.
+          </p>
+          <span class="number">1</span>
+        </article>
+        <!--end of first timeline item -->
+        <!-- second timeline item -->
+        <article class="timeline-item">
+          <h4>2020</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
+            voluptatum amet voluptas a provident quis architecto nisi. Velit,
+            quas eveniet.
+          </p>
+          <span class="number">2</span>
+        </article>
+        <!--end of second timeline item -->
+        <!-- third timeline item -->
+        <article class="timeline-item">
+          <h4>2018</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
+            voluptatum amet voluptas a provident quis architecto nisi. Velit,
+            quas eveniet.
+          </p>
+          <span class="number">3</span>
+        </article>
+        <!--end of third timeline item -->
+        <!-- fourth timeline item -->
+        <article class="timeline-item">
+          <h4>2016</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
+            voluptatum amet voluptas a provident quis architecto nisi. Velit,
+            quas eveniet.
+          </p>
+          <span class="number">4</span>
+        </article>
+        <!--end of fourth timeline item -->
+        <!-- fifth timeline item -->
+        <article class="timeline-item">
+          <h4>2015</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
+            voluptatum amet voluptas a provident quis architecto nisi. Velit,
+            quas eveniet.
+          </p>
+          <span class="number">5</span>
+        </article>
+        <!--end of fifth timeline item -->
+        <!-- sixth timeline item -->
+        <article class="timeline-item">
+          <h4>2014</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
+            voluptatum amet voluptas a provident quis architecto nisi. Velit,
+            quas eveniet.
+          </p>
+          <span class="number">6</span>
+        </article>
+        <!--end of sixth timeline item -->
+      </div>
+    </section>
     <!--end of  timeline -->
     <!-- blog -->
 
