--- a/index.html
+++ b/index.html
@@ -488,7 +488,29 @@
     </section>
     <!--end of  timeline -->
     <!-- blog -->
+    <section class="section blog">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>blog</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center blog-center">
+        <!-- first article -->
 
+        <div class="card">
+          <!-- front of the card -->
+          <div class="card-side card-front">
+            <h4>card front</h4>
+          </div>
+          <!-- card back -->
+          <div class="card-side card-back">
+            <h4>card back</h4>
+          </div>
+        </div>
+        <!-- end of first article -->
+      </div>
+    </section>
     <!--end of  blog -->
     <!-- footer -->
 
