blog section styling completed

--- a/index.html
+++ b/index.html
@@ -501,14 +501,101 @@
         <div class="card">
           <!-- front of the card -->
           <div class="card-side card-front">
-            <h4>card front</h4>
+            <img src="./images/project-1.jpeg" alt="" />
+            <div class="card-info">
+              <h4>article title</h4>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe
+                vero placeat dignissimos soluta quisquam alias ratione
+                perspiciatis tempore harum facere?
+              </p>
+              <div class="card-footer">
+                <img src="./images/hero-img-small.jpeg" alt="author image" />
+                <p>7 minutes read</p>
+              </div>
+            </div>
           </div>
           <!-- card back -->
           <div class="card-side card-back">
-            <h4>card back</h4>
+            <button class="btn">read more</button>
           </div>
         </div>
         <!-- end of first article -->
+        <!-- second article -->
+
+        <div class="card">
+          <!-- front of the card -->
+          <div class="card-side card-front">
+            <img src="./images/project-2.jpeg" alt="" />
+            <div class="card-info">
+              <h4>article title</h4>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe
+                vero placeat dignissimos soluta quisquam alias ratione
+                perspiciatis tempore harum facere?
+              </p>
+              <div class="card-footer">
+                <img src="./images/hero-img-small.jpeg" alt="author image" />
+                <p>7 minutes read</p>
+              </div>
+            </div>
+          </div>
+          <!-- card back -->
+          <div class="card-side card-back">
+            <button class="btn">read more</button>
+          </div>
+        </div>
+        <!-- end of second article -->
+        <!-- third article -->
+
+        <div class="card">
+          <!-- front of the card -->
+          <div class="card-side card-front">
+            <img src="./images/project-3.jpeg" alt="" />
+            <div class="card-info">
+              <h4>article title</h4>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe
+                vero placeat dignissimos soluta quisquam alias ratione
+                perspiciatis tempore harum facere?
+              </p>
+              <div class="card-footer">
+                <img src="./images/hero-img-small.jpeg" alt="author image" />
+                <p>7 minutes read</p>
+              </div>
+            </div>
+          </div>
+          <!-- card back -->
+          <div class="card-side card-back">
+            <button class="btn">read more</button>
+          </div>
+        </div>
+        <!-- end of third article -->
+        <!-- fourth article -->
+
+        <div class="card">
+          <!-- front of the card -->
+          <div class="card-side card-front">
+            <img src="./images/project-4.jpeg" alt="" />
+            <div class="card-info">
+              <h4>article title</h4>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe
+                vero placeat dignissimos soluta quisquam alias ratione
+                perspiciatis tempore harum facere?
+              </p>
+              <div class="card-footer">
+                <img src="./images/hero-img-small.jpeg" alt="author image" />
+                <p>7 minutes read</p>
+              </div>
+            </div>
+          </div>
+          <!-- card back -->
+          <div class="card-side card-back">
+            <button class="btn">read more</button>
+          </div>
+        </div>
+        <!-- end of fourth article -->
       </div>
     </section>
     <!--end of  blog -->
