--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </li>
             <li>
               <a href="https://www.linkedin.com" class="social-icon">
-                <i class="fab fa-facebook"></i>
+                <i class="fa-brands fa-linkedin"></i>
               </a>
             </li>
             <li>
@@ -600,7 +600,38 @@
     </section>
     <!--end of  blog -->
     <!-- footer -->
+    <footer class="footer">
+      <p>&copy; <span id="date"></span> john doe. all rights reserved</p>
 
+      <!-- social icons -->
+      <ul class="social-icons">
+        <li>
+          <a href="https://www.facebook.com" class="social-icon">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com" class="social-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.quora.com" class="social-icon">
+            <i class="fab fa-quora"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com" class="social-icon">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.squarespace.com" class="social-icon">
+            <i class="fab fa-squarespace"></i>
+          </a>
+        </li>
+      </ul>
+    </footer>
     <script src="./js/app.js"></script>
   </body>
 </html>
