--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,148 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>contact page</title>
+    <title>John Doe || Contact</title>
+    <link
+      rel="stylesheet"
+      href="./fontawesome-free-6.2.1-web/css/all.min.css"
+    />
+    <!-- css -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <h1>contact page</h1>
+    <!-- navbar -->
+    <nav class="nav" id="nav">
+      <div class="nav-center">
+        <!-- nav header -->
+        <div class="nav-header">
+          <img src="./images/logo.svg" class="nav-logo" alt="nav logo" />
+          <button class="nav-btn" id="nav-btn">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+        <!-- nav links -->
+        <ul class="nav-links">
+          <li>
+            <a href="index.html">home</a>
+          </li>
+          <li>
+            <a href="about.html">about</a>
+          </li>
+          <li>
+            <a href="projects.html">projects</a>
+          </li>
+          <li>
+            <a href="contact.html">contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- end of navbar -->
+    <!-- sidebar -->
+    <aside class="sidebar" id="sidebar">
+      <div>
+        <button class="close-btn" id="close-btn">
+          <i class="fas fa-times"></i>
+        </button>
+        <!-- nav links -->
+        <ul class="sidebar-links">
+          <li>
+            <a href="index.html">home</a>
+          </li>
+          <li>
+            <a href="about.html">about</a>
+          </li>
+          <li>
+            <a href="projects.html">projects</a>
+          </li>
+          <li>
+            <a href="contact.html">contact</a>
+          </li>
+        </ul>
+        <!-- social icons -->
+        <ul class="social-icons">
+          <li>
+            <a href="https://www.facebook.com" class="social-icon">
+              <i class="fab fa-facebook"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com" class="social-icon">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.quora.com" class="social-icon">
+              <i class="fab fa-quora"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com" class="social-icon">
+              <i class="fab fa-facebook"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.squarespace.com" class="social-icon">
+              <i class="fab fa-squarespace"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </aside>
+    <!-- end of sidebar -->
+    <section class="section single-page">
+      <div class="section-title">
+        <h1>contact</h1>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center page-info">
+        <!-- contact page-->
+        <p>
+          If you are looking to get ahold of me, you can send me an email at
+          <a href="mailto:email@email.com">smajaas@gmail.com</a>
+        </p>
+        <p>
+          You can also reach me on Twitter at
+          <a href="https://www.twitter.com">@smajaas </a>
+        </p>
+      </div>
+    </section>
+
+    <!-- footer -->
+    <footer class="footer">
+      <p>&copy; <span id="date"></span> john doe. all rights reserved</p>
+
+      <!-- social icons -->
+      <ul class="social-icons">
+        <li>
+          <a href="https://www.facebook.com" class="social-icon">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com" class="social-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.quora.com" class="social-icon">
+            <i class="fab fa-quora"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com" class="social-icon">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.squarespace.com" class="social-icon">
+            <i class="fab fa-squarespace"></i>
+          </a>
+        </li>
+      </ul>
+    </footer>
+    <script src="./js/app.js"></script>
   </body>
 </html>
