--- a/projects.html
+++ b/projects.html
@@ -3,10 +3,166 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>products page</title>
+    <title>John Doe || Projects</title>
+    <link
+      rel="stylesheet"
+      href="./fontawesome-free-6.2.1-web/css/all.min.css"
+    />
+    <!-- css -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <h1>products page</h1>
+    <!-- navbar -->
+    <nav class="nav" id="nav">
+      <div class="nav-center">
+        <!-- nav header -->
+        <div class="nav-header">
+          <img src="./images/logo.svg" class="nav-logo" alt="" />
+          <button class="nav-btn" id="nav-btn">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+        <!-- nav links -->
+        <ul class="nav-links">
+          <li><a href="index.html">home</a></li>
+          <li><a href="about.html">about</a></li>
+          <li><a href="projects.html">projects</a></li>
+          <li><a href="contact.html">contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <!-- end of navbar -->
+    <!-- sidebar -->
+    <aside class="sidebar" id="sidebar">
+      <div>
+        <button id="close-btn" class="close-btn">
+          <i class="fas fa-times"></i>
+        </button>
+        <ul class="sidebar-links">
+          <li><a href="index.html">home</a></li>
+          <li><a href="about.html">about</a></li>
+          <li><a href="projects.html">projects</a></li>
+          <li><a href="contact.html">contact</a></li>
+        </ul>
+        <ul class="social-icons">
+          <!-- single item -->
+          <li>
+            <a href="https://www.twitter.com" class="social-icon">
+              <i class="fab fa-facebook"></i>
+            </a>
+          </li>
+          <!-- end of single item -->
+          <!-- single item -->
+          <li>
+            <a href="https://www.twitter.com" class="social-icon">
+              <i class="fab fa-linkedin"></i>
+            </a>
+          </li>
+          <!-- end of single item -->
+          <!-- single item -->
+          <li>
+            <a href="https://www.twitter.com" class="social-icon">
+              <i class="fab fa-squarespace"></i>
+            </a>
+          </li>
+          <!-- end of single item -->
+          <!-- single item -->
+          <li>
+            <a href="https://www.twitter.com" class="social-icon">
+              <i class="fab fa-behance"></i>
+            </a>
+          </li>
+          <!-- end of single item -->
+          <!-- single item -->
+          <li>
+            <a href="https://www.twitter.com" class="social-icon">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <!-- end of single item -->
+        </ul>
+      </div>
+    </aside>
+    <!-- end of sidebar -->
+
+    <!-- ############## -->
+    <!-- ############## -->
+
+    <header class="projects-hero">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>my projects</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+    </header>
+    <section class="section">
+      <div class="section-center projects-page-center">
+        <!-- first project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/project-1.jpeg" alt="single project" />
+            <a href="https://www.digitalcommit.com" class="project-icon">
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>banking app</h4>
+            <p>
+              With a mobile banking app, you have ready access to a host of
+              banking functions. For example, you can check your savings bank
+              account balance, transfer funds to another user, request a new
+              cheque book, set up standard instructions, initiate money
+              transfers open a Fixed Deposit account, and pay utility bills.
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a href="https://www.github.com">source code</a>
+            </div>
+          </div>
+        </article>
+        <!-- end of first project -->
+      </div>
+    </section>
+    <!-- ############## -->
+    <!-- ############## -->
+
+    <!-- footer -->
+    <footer class="footer">
+      <p>&copy; <span id="date"></span> john doe. all rights reserved</p>
+
+      <!-- social icons -->
+      <ul class="social-icons">
+        <li>
+          <a href="https://www.facebook.com" class="social-icon">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com" class="social-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.quora.com" class="social-icon">
+            <i class="fab fa-quora"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com" class="social-icon">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.squarespace.com" class="social-icon">
+            <i class="fab fa-squarespace"></i>
+          </a>
+        </li>
+      </ul>
+    </footer>
+    <script src="./js/app.js"></script>
   </body>
 </html>
